# rockfetch

./: Cargo.toml  Config.toml  LICENSE  README.md  build.rs  container-push.pl
.cargo/: config.toml
src/: config.rs  main.rs
src/get_info/: command.rs  mod.rs  shell.rs  system.rs
src/os_functions/: arch.rs  artix.rs  endeavour.rs  fedora.rs  generic_unix.rs  mod.rs  ubuntu.rs  void.rs
