[package]
name = "rockfetch"
version = "0.1.6"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-release = "0.1.7"
rusqlite = { version = "0.28.0", features = ["bundled"], optional=true }

[build-dependencies]
toml = "0.5.8"

[features]
fedora-sqlite=["dep:rusqlite"]
default = ["fedora-sqlite"]
