[package]
name = "rockfetch"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "An aestethic fetch program written in Rust"
repository = "https://github.com/DumbMahreeo/rockfetch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-release = "0.1.7"
rusqlite = { version = "0.28.0", features = ["bundled"], optional=true }

[build-dependencies]
toml = "0.5.8"

[features]
fedora-sqlite=["dep:rusqlite"]
default = ["fedora-sqlite"]
